big collector refactor